force-app/main/default/objects/UPP_Notification_Template__mdt/UPP_Notification_Template__mdt.object-meta.xml
<CustomObject>
    <label>UPP Notification Template</label>
    <pluralLabel>UPP Notification Templates</pluralLabel>
</CustomObject>