force-app/main/default/objects/UPP_Notification_Template__mdt/fields/Certification_Designation__c.field-meta.xml
<CustomField>
    <fullName>Certification_Designation__c</fullName>
    <label>Certification Visibility</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mixed</fullName>
                <default>true</default>
                <label>Mixed</label>
            </value>
            <value>
                <fullName>Certified</fullName>
            </value>
            <value>
                <fullName>Non-Certified</fullName>
            </value>
            <value>
                <fullName>ALL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>