force-app/main/default/objects/UPP_Notification_Template__mdt/fields/Page_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Page_Visibility__c</fullName>
    <label>Page Visibility</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>My Company Profile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>