force-app/main/default/objects/UPP_Notification_Template__mdt/fields/Permission_Sets__c.field-meta.xml
<CustomField>
    <fullName>Permission_Sets__c</fullName>
    <inlineHelpText>One entry per line</inlineHelpText>
    <label>Permission Set(s)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>