force-app/main/default/objects/UPP_Notification_Template__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>License Renewal</fullName>
                <default>true</default>
                <label>License Renewal</label>
            </value>
            <value>
                <fullName>T&amp;C Signed</fullName>
            </value>
            <value>
                <fullName>Insurance Provided</fullName>
            </value>
            <value>
                <fullName>License Provided</fullName>
            </value>
            <value>
                <fullName>Certification Approved</fullName>
            </value>
            <value>
                <fullName>Installation Experience Provided</fullName>
            </value>
            <value>
                <fullName>Account Master Data Lock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>