force-app/main/default/objects/UPP_Notification_Template__mdt/validationRules/Template_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Template_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Template__c)</errorConditionFormula>
    <errorDisplayField>Template__c</errorDisplayField>
    <errorMessage>Required</errorMessage>
</ValidationRule>